--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,200 +1,236 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".DetailActivity">
 
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:dividerPadding="5dp"
-        android:orientation="horizontal"
-        android:baselineAligned="false">
+        android:orientation="vertical"
+        android:padding="5dp">
 
         <LinearLayout
-            android:layout_width="0dp"
-            android:layout_weight="0.4"
-            android:layout_height="wrap_content">
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="220dp"
-                android:src="@drawable/poster_avengerinfinity"
-                android:contentDescription="@string/todo" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_weight="0.6"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:baselineAligned="false"
+            android:dividerPadding="5dp"
+            android:orientation="horizontal">
 
-            <TextView
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:textColor="@color/colorBluePrimaryDark"
-                android:text="@string/lbl_movie_title" />
-
-            <TextView
-                android:id="@+id/txt_movie_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/txt_movie_title" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:layout_marginTop="5dp"
-                android:textColor="@color/colorBluePrimaryDark"
-                android:text="@string/lbl_movie_year" />
-
-            <TextView
-                android:id="@+id/txt_movie_year"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/txt_movie_title" />
-
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:layout_marginTop="5dp"
-                android:textColor="@color/colorBluePrimaryDark"
-                android:text="@string/lbl_movie_director" />
-
-            <TextView
-                android:id="@+id/txt_movie_director"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/txt_movie_director" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:layout_marginTop="5dp"
-                android:textColor="@color/colorBluePrimaryDark"
-                android:text="@string/lbl_movie_stars" />
-
-            <TextView
-                android:id="@+id/txt_movie_stars"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/txt_movie_stars" />
-        </LinearLayout>
-    </LinearLayout>
-
-    <HorizontalScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:fillViewport="true">
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_gravity="center"
-        android:orientation="horizontal"
-        android:baselineAligned="false">
-
-        <RelativeLayout
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:layout_gravity="center"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/img_thumb_1"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:src="@drawable/poster_glass"
-                android:contentDescription="@string/todo" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:foregroundGravity="center"
-                android:gravity="center"
-                android:layout_height="wrap_content"
-                android:text="@string/lbl_movie_title"
-                android:layout_below="@+id/img_thumb_1"/>
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+                android:layout_weight="0.4">
 
                 <ImageView
-                    android:id="@+id/img_thumb_2"
-                    android:layout_width="150dp"
-                    android:layout_height="150dp"
-                    android:src="@drawable/poster_hunterkiller"
-                    android:contentDescription="@string/todo" />
+                    android:id="@+id/img_movie_thumb"
+                    android:layout_width="match_parent"
+                    android:layout_height="220dp"
+                    android:contentDescription="@string/todo"
+                    android:src="@drawable/poster_avengerinfinity" />
+            </LinearLayout>
 
-            <TextView
-                android:foregroundGravity="center"
-                android:gravity="center"
-                android:layout_width="match_parent"
+            <LinearLayout
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="@string/lbl_movie_title"
-                android:layout_below="@+id/img_thumb_2"/>
+                android:layout_weight="0.6"
+                android:orientation="vertical">
 
-        </RelativeLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/lbl_movie_title"
+                    android:textColor="@color/colorBluePrimaryDark"
+                    android:textStyle="bold" />
 
-        <RelativeLayout
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:gravity="center"
+                <TextView
+                    android:id="@+id/txt_movie_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/txt_movie_title"
+                    android:textSize="14sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:text="@string/lbl_movie_year"
+                    android:textColor="@color/colorBluePrimaryDark"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/txt_movie_year"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/txt_movie_title" />
+
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:text="@string/lbl_movie_director"
+                    android:textColor="@color/colorBluePrimaryDark"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/txt_movie_director"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/txt_movie_director" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:text="@string/lbl_movie_stars"
+                    android:textColor="@color/colorBluePrimaryDark"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/txt_movie_stars"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/txt_movie_stars" />
+            </LinearLayout>
+        </LinearLayout>
+
+        <HorizontalScrollView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_gravity="center"
+            android:fillViewport="true">
 
-            <ImageView
-                android:id="@+id/img_thumb_3"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:src="@drawable/poster_marrypopins"
-                android:contentDescription="@string/todo" />
-
-            <TextView
-                android:layout_width="match_parent"
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:baselineAligned="false"
                 android:gravity="center"
-                android:text="@string/lbl_movie_title"
-                android:layout_below="@+id/img_thumb_3"/>
-        </RelativeLayout>
+                android:orientation="horizontal">
+
+                <GridLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    android:paddingBottom="5dp">
+
+                    <ImageView
+                        android:id="@+id/img_thumb_1"
+                        android:layout_width="130dp"
+                        android:layout_height="130dp"
+                        android:layout_row="1"
+                        android:contentDescription="@string/todo"
+                        android:src="@drawable/poster_glass" />
+
+                    <TextView
+                        android:id="@+id/txt_movie_title_1"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_row="2"
+                        android:foregroundGravity="center"
+                        android:gravity="center"
+                        android:maxEms="7"
+                        android:maxLines="1"
+                        android:text="@string/lbl_movie_title"
+                        android:textStyle="bold" />
+                </GridLayout>
+
+                <GridLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    android:paddingBottom="5dp">
+
+                    <ImageView
+                        android:id="@+id/img_thumb_2"
+                        android:layout_width="130dp"
+                        android:layout_height="130dp"
+                        android:layout_row="1"
+                        android:contentDescription="@string/todo"
+                        android:src="@drawable/poster_hunterkiller" />
+
+                    <TextView
+                        android:id="@+id/txt_movie_title_2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_row="2"
+                        android:foregroundGravity="center"
+                        android:gravity="center"
+                        android:maxEms="7"
+                        android:maxLines="1"
+                        android:text="@string/lbl_movie_title"
+                        android:textStyle="bold" />
+
+                </GridLayout>
+
+                <GridLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    android:paddingBottom="5dp">
+
+                    <ImageView
+                        android:id="@+id/img_thumb_3"
+                        android:layout_width="130dp"
+                        android:layout_height="130dp"
+                        android:layout_row="1"
+                        android:contentDescription="@string/todo"
+                        android:src="@drawable/poster_marrypopins" />
+
+                    <TextView
+                        android:id="@+id/txt_movie_title_3"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_row="2"
+                        android:gravity="center"
+                        android:maxEms="7"
+                        android:maxLines="1"
+                        android:text="@string/lbl_movie_title"
+                        android:textStyle="bold" />
+                </GridLayout>
+            </LinearLayout>
+        </HorizontalScrollView>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="@string/lbl_movie_overview"
+            android:textColor="@color/colorBluePrimaryDark"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/txt_movie_synopsis"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/txt_movie_synopsis" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="@string/lbl_movie_votes"
+            android:textColor="@color/colorBluePrimaryDark"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/txt_movie_votes"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/txt_movie_votes" />
+
     </LinearLayout>
-    </HorizontalScrollView>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:textStyle="bold"
-        android:textColor="@color/colorBluePrimaryDark"
-        android:text="@string/lbl_movie_overview"/>
-
-    <TextView
-        android:id="@+id/txt_movie_synopsis"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/txt_movie_synopsis"/>
-
-</LinearLayout>
 
 
 </ScrollView>
