--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,15 +6,14 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
 
-    <color name="colorBluePrimary">#80b3ff</color>
-    <color name="colorBluePrimaryDark">#1883D7</color>
+    <color name="colorBluePrimary">#4D9ACA</color>
+    <color name="colorBluePrimaryDark">#2C80C0</color>
     <color name="colorGrey">#f0f0f5</color>
     <color name="colorGreyDark">#b3b3cc</color>
+    <color name="colorGreyDarker">#6B6B6A</color>
     <color name="colorGreyLight">#f0f0f5</color>
 
-    <color name="colorGreenLight">#66ff66</color>
-
-
+    <color name="colorGreenLight">#61C74F</color>
 
 
 </resources>
