--- a/app/src/main/res/layout/item_list_movies.xml
+++ b/app/src/main/res/layout/item_list_movies.xml
@@ -135,7 +135,7 @@
                 android:id="@+id/txt_movie_metascore"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="25dp"
+                android:layout_marginStart="15dp"
                 android:layout_marginEnd="3dp"
                 android:background="@color/colorGreenLight"
                 android:paddingStart="2dp"
@@ -193,7 +193,7 @@
                 android:id="@+id/lbl_stars"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/lbl_director"
+                android:layout_below="@+id/txt_movie_director"
                 android:layout_marginStart="5dp"
                 android:layout_marginEnd="5dp"
                 android:text="@string/lbl_stars"
@@ -204,7 +204,7 @@
                 android:id="@+id/txt_movie_stars"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/lbl_director"
+                android:layout_below="@+id/txt_movie_director"
                 android:layout_marginStart="5dp"
                 android:layout_marginEnd="5dp"
                 android:layout_toRightOf="@+id/lbl_stars"
